--- a/detail/ID_ownerlessResource.html
+++ b/detail/ID_ownerlessResource.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：使资源接受对象化管理，免去繁琐易错的手工分配回收过程，是 C++ 程序设计的重要方法。" />
+  <meta name="description" content="C/C++ 安全编程要点：将资源托管于类的对象，使资源的生命周期协同于对象的生命周期，避免分散处理分配与回收等问题，是 C++ 程序设计中的重要方法。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,57 +21,47 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>使资源接受对象化管理，免去繁琐易错的手工分配回收过程，是 C++ 程序设计的重要方法。</p>
+<p>将资源托管于类的对象，使资源的生命周期协同于对象的生命周期，避免分散处理分配与回收等问题，是 C++ 程序设计中的重要方法。</p>
 
-<p>将资源分配的结果直接在程序中传递是非常不安全的，极易产生泄漏或死锁等问题。动态申请的资源如果只用普通变量引用，不受对象的构造或析构机制控制，则称为“无主”资源，在 C++ 程序设计中应当避免。</p>
-
-<p>应尽量使用标准库提供的容器或智能指针，避免显式使用资源管理接口。本规则集合示例中的 new/delete、lock/unlock 意在代指一般的资源操作，仅作示例，在实际代码中应尽量避免。</p>
+<p>动态申请的资源如果只能通过普通指针或变量访问，不受对象的构造和析构等机制控制，则称为“无主”资源，极易产生泄漏或死锁等问题。应尽量使用标准库提供的容器、智能指针以及资源对应的类，避免直接使用 new、delete 以及底层资源管理接口。</p>
 
 <p>示例：</p>
-<code>void foo(size_t size) {
-    int* p = new int[size];   //<i> Bad, ownerless</i>
-    ....                      //<i> If any exception is thrown, or a wrong jump, leak</i>
-    delete[] p;
-}
+<code>int* p = new int[8];   //<i> Non-compliant, ownerless</i>
+....                   //<i> If any exception is thrown,</i>
+                       //<i> or any wrong jump occurs, the memory leaks</i>
 
-struct X {
+struct X { int* p; };
+X x;
+x.p = new int[8];      //<i> Non-compliant, no destructor, ‘x’ is not an owner</i>
+....
+
+delete[] p;     //<i> Non-compliant, explicit delete</i>
+delete[] x.p;   //<i> Non-compliant</i></code>
+<p>例中用不受析构函数控制的指针保存 new 表达式的结果，以及对应的 delete 表达式均不符合要求。</p>
+
+<p>应将资源托管于类的对象：</p>
+<code>class Mgr {
     int* p;
-};
-
-void bar() {
-    X x;
-    x.p = new int[123];   //<i> Bad, ‘X’ has no destructor, ‘x’ is not an owner</i>
-    ....
-}
-
-class Y {
-    int* p;
-
 public:
-    Y(size_t n): p(new int[n]) {}
-   ~Y() { delete[] p; }
+    Mgr(size_t n): p(new int[n]) {}
+   ~Mgr() { delete[] p; }
 };
 
-void baz() {
-    Y y(123);   //<i> Good, ‘y’ is the owner of the resource</i>
-    ....
-}</code>
-<p>例中 foo 和 bar 函数的资源管理方式是不符合 C++ 理念的，baz 函数中的 y 对象负责资源的分配与回收，称 y 对象具有资源的所有权，相关资源的生命周期与 y 的生命周期一致，有效避免了资源泄漏或错误回收等问题。</p>
+Mgr m(8);   //<i> Compliant, ‘m’ is the owner of the resource</i></code>
+<p>例中 m 对象负责资源的分配与回收，称 m 对象拥有资源的所有权，相关资源的生命周期与对象的生命周期一致，有效避免了资源泄漏或错误回收等问题。针对成员的 new、delete 可不受本规则限制，但应优先使用容器或智能指针。</p>
 
 <p>资源的所有权可以发生转移，但应保证转移前后均有对象负责管理资源，并且在转移过程中不会产生异常。进一步理解对象化管理方法，可参见“<a href="https://en.cppreference.com/w/cpp/language/raii" target="_blank" class="dashed-link">RAII（Resource Acquisition Is Initialization）</a>”等机制。</p>
 
-<p>与资源相关的系统接口不应直接被业务代码引用，如：</p>
+<p>另外，底层资源管理接口也不应直接在业务代码中使用，如：</p>
 <code>void foo(const TCHAR* path) {
-    HANDLE h;
     WIN32_FIND_DATA ffd;
-
-    h = FindFirstFile(path, &amp;ffd);  //<i> Bad, ownerless</i>
+    HANDLE h = FindFirstFile(path, &amp;ffd);  //<i> Non-compliant, ownerless</i>
     ....
     CloseHandle(h);  //<i> Is it right?</i>
 }</code>
-<p>例中 Windows API FindFirstFile 返回资源句柄，是“无主”资源，很可能被后续代码误用或遗忘。</p>
+<p>例中 FindFirstFile 是 Windows API，返回的资源句柄对应“无主”资源，需要显式回收。</p>
 
-<p>应进行合理封装：</p>
+<p>应对其合理封装：</p>
 <code>class MY_FIND_DATA
 {
     struct HANDLE_DELETER
@@ -87,7 +77,7 @@ public:
     ....
     HANDLE handle() { return uptr.get(); }
 };</code>
-<p>本例将 FindFirstFile 及其相关数据封装成一个类，由 unique_ptr 对象保存 FindFirstFile 的结果，FindClose 是资源的回收方法，将其作为 unique_ptr 对象的组成部分，使资源可以被自动回收。</p>
+<p>将 FindFirstFile 及其相关数据封装成一个类，由 unique_ptr 对象保存 FindFirstFile 的结果，FindClose 是资源的回收方法，将其作为 unique_ptr 对象的组成部分，使资源可以被自动回收。</p>
 
 </main>
 
