--- a/detail/ID_unsuitableStructTag.html
+++ b/detail/ID_unsuitableStructTag.html
@@ -7,11 +7,11 @@
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>定义 POD 类和非 POD 类应分别使用 struct 和 class 关键字 - C/C++ 安全规则</title>
+  <title>POD 类和非 POD 类应分别使用 struct 和 class 关键字定义 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>定义 POD 类和非 POD 类应分别使用 struct 和 class 关键字</h1>
+  <h1>POD 类和非 POD 类应分别使用 struct 和 class 关键字定义</h1>
   <div id="subtitle">
     <div id="subtitle-id">5.1.21 ID_unsuitableStructTag</div>
     <div id="subtitle-tags">
