--- a/detail/ID_forbidMallocAndFree.html
+++ b/detail/ID_forbidMallocAndFree.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：在 C++ 代码中不应使用 malloc、free 等 C 内存管理函数，应使用 C++ 内存管理方法。" />
+  <meta name="description" content="C/C++ 安全编程要点：为了简化资源管理并避免潜在的错误，在 C++ 代码中不应直接使用分配、释放普通指针的函数，而应使用容器、智能指针和相关工厂函数。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>C++ 代码中禁用 C 内存管理函数 - C/C++ 安全规则</title>
+  <title>在 C++ 代码中禁用 C 资源管理函数 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>C++ 代码中禁用 C 内存管理函数</h1>
+  <h1>在 C++ 代码中禁用 C 资源管理函数</h1>
   <div id="subtitle">
     <div id="subtitle-id">2.25 ID_forbidMallocAndFree</div>
     <div id="subtitle-tags">
@@ -21,18 +21,18 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>在 C++ 代码中不应使用 malloc、free 等 C 内存管理函数，应使用 C++ 内存管理方法。</p>
+<p>为了简化资源管理并避免潜在的错误，在 C++ 代码中不应直接使用分配、释放普通指针的函数，而应使用容器、智能指针和相关工厂函数。</p>
 
 <p>示例：</p>
 <code>void foo(size_t n) {
-    int* p = (int*)malloc(n * sizeof(int));  //<i> Unsafe and verbose</i>
+    int* p = (int*)malloc(n * sizeof(int));  //<i> Non-compliant</i>
     ....
-    free(p);
+    free(p);  //<i> Non-compliant</i>
 }
 </code>
 <p>应改为：</p>
 <code>void foo(size_t n) {
-    auto p = make_unique&lt;int[]&gt;(n);  //<i> Safe and brief</i>
+    auto p = make_unique&lt;int[]&gt;(n);  //<i> Compliant</i>
     ....
 }</code>
 
