--- a/detail/ID_sizeof_pointer.html
+++ b/detail/ID_sizeof_pointer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：sizeof 作用于指针的结果是指针的大小，而不是指针指向内容的大小，sizeof 作用于指针很容易造成错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：sizeof 作用于指针的结果是指针本身的大小，而不是指针指向对象的大小，sizeof 作用于指针属于常见笔误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>sizeof 作用于指针的结果是指针的大小，而不是指针指向内容的大小，sizeof 作用于指针很容易造成错误。</p>
+<p>sizeof 作用于指针的结果是指针本身的大小，而不是指针指向对象的大小，sizeof 作用于指针属于常见笔误。</p>
 
 <p>示例：</p>
 <code>void foo(int* p) {
@@ -32,7 +32,7 @@
 <code>void foo(int* p, int n) {
     memset(p, 0, n * sizeof(*p));   //<i> OK</i>
 }</code>
-<p>其中参数 n 是数组元素的个数。</p>
+<p>其中 n 是 p 指向数组的元素个数。</p>
 
 </main>
 
