--- a/detail/ID_stackAllocation.html
+++ b/detail/ID_stackAllocation.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：alloca、strdupa 等函数可以在栈上动态分配内存，但分配失败时的行为不受程序控制。" />
+  <meta name="description" content="C/C++ 安全编程要点：alloca、strdupa 等函数可以在栈上动态分配内存，但分配失败时难以通过标准方法控制程序的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>避免使用在栈上分配内存的函数 - C/C++ 安全规则</title>
+  <title>避免使用在栈上动态分配内存的函数 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>避免使用在栈上分配内存的函数</h1>
+  <h1>避免使用在栈上动态分配内存的函数</h1>
   <div id="subtitle">
     <div id="subtitle-id">2.20 ID_stackAllocation</div>
     <div id="subtitle-tags">
@@ -21,10 +21,12 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>alloca、strdupa 等函数可以在栈上动态分配内存，但分配失败时的行为不受程序控制。</p>
+<p>alloca、strdupa 等函数可以在栈上动态分配内存，但分配失败时难以通过标准方法控制程序的行为。</p>
+
+<p>在栈上动态分配内存的函数可能效率更高，分配的内存也不用显式回收，但无法满足分配需求时会直接导致运行时错误，对其返回值的检查是无效的。应避免使用这种后果难以控制的函数，尤其在循环和递归调用过程中更不应使用这种函数，而且这种函数不是标准函数，依赖平台和编译器的具体实现。</p>
 
 <p>示例：</p>
-<code>#include &lt;alloca.h&gt;
+<code>#include &lt;alloca.h&gt;  //<i> or &lt;malloc.h&gt;</i>
 
 void fun(size_t n) {
     int* p = (int*)alloca(n * sizeof(int));  //<i> Non-compliant</i>
@@ -33,7 +35,7 @@ void fun(size_t n) {
     }
     ....
 }</code>
-<p>例中 alloca 函数在失败时往往会使程序崩溃，对其返回值的检查是无效的。这种后果不可控的函数应避免使用，尤其在循环和递归调用过程中更不应使用这种函数。</p>
+<p>例中 alloca 函数在栈上分配内存，如果 n 过大会使程序崩溃。</p>
 
 </main>
 
